Add primed attr to item collection Sort primed / unprimed items in buy template Fix buy-list scroll issue with event in filter plugin

--- a/client/styles/shop.scss
+++ b/client/styles/shop.scss
@@ -64,9 +64,15 @@
 		display:none;
 	}
 
+
 	&:hover {
 		background-color: #4179BB;
 	}
+
+	> .row, .row-extend {
+		pointer-events:none;
+	}
+	
 
 	.buy-left {
 		display:block;
