--- a/client/styles/items.scss
+++ b/client/styles/items.scss
@@ -1,17 +1,111 @@
-
+input.error{
+    background-color:rgb(255, 231, 231);
+}
 
 #item-details {
 	padding-top: 20px;
 	color:white;
 
+	.form-control {
+		margin-top: 20px;
+		padding: 30px 15px;
+		font-size: 30px;
+	}
+
+	#category-dropdown {
+		font-size: 32px;
+	}
+
+	#category-dropdown-button {
+		margin-top:20px;
+		padding: 7px 20px 7.5px;
+		font-size: 32px;
+	}
+
 	.item-fields {
+		padding: 10px 30px 10px 30px;
 		background-color: #36333C;
-	
+	    border-top-left-radius: 20px;
+   		border-bottom-left-radius: 20px;		
 	}
 
 	.item-accept {
 		padding-left: 0px;
 	}
+
+	#set-item {
+		border-top-right-radius: 20px;
+		border-bottom-right-radius: 20px;
+		border-top-left-radius: 0;
+		border-bottom-left-radius: 0;
+		background-color: #17B26A;
+		font-size: 7rem;
+
+		&:hover {
+			background-color: #00D672;
+		}
+	}
+
+	.item-color {
+		height: 61.8px;
+   		margin-top: 20px;
+	}
+
+	.color-box {
+		width: 100%;
+		height: 100%;
+	}
+
+	#color-1 {
+		background-color: #2C517D;
+		border-radius: 4px;
+
+	}
+
+	#color-2 {
+		background-color: #D35B5B;
+		border-radius: 4px;
+	}
+
+	#color-3 {
+		background-color: #B29F59;
+		border-radius: 4px;
+	}
+
+	#color-4 {
+		background-color: #977BA9;
+		border-radius: 4px;
+	}
+
+	#suggestion-profile {
+		margin-top: 20px;
+		height: 61.8px;
+		font-size: 24px;
+		background-color: #36333C;
+		border: 0;
+
+		&:hover {
+			background-color: #413B48;
+			color: #fff;
+		}
+
+	}
+
+	#amazon-profile {
+		margin-top: 20px;
+		height: 61.8px;
+		font-size: 24px;
+		background-color: #36333C;
+		border: 0;
+
+		&:hover {
+			background-color: #413B48;
+			color: #fff;
+		}
+
+	}
+
+
 
 	.control-group:last-child {
 		padding-bottom: 20px;
