--- a/client/styles/login.scss
+++ b/client/styles/login.scss
@@ -4,6 +4,7 @@
 
 
 	h1 {
+
 		margin-top: 200px;
 	    font-family: ff-nuvo-web-pro;
 	    font-weight: 900;
@@ -20,13 +21,13 @@
 
 	img {
 		position: absolute;
+	    bottom: 0;
+	    left: 0;
+	    margin-left: auto;
+	    margin-right: auto;
+	    max-height:40%;
 	    max-width: 1200px;
 	    opacity: .5;
-	    margin-right: auto;
-	    margin-left: auto;
-
-	    left: 0;
 	    righT: 0;
-	    bottom: 0;
 	}
 }
