--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -48,29 +48,22 @@
 
 								<div class="row">
 
-									<div class="col-xs-3 item-color">
+									<input id="color-1" class="col-xs-3 item-color" type="checkbox" name="color-1" />
+
+
+									<!-- <div class="col-xs-3 item-color">
 										<div id="color-1" class="color-box">
 											<span></span>
 										</div>
-									</div>
+									</div> -->
 
-									<div class="col-xs-3 item-color">
-										<div id="color-2" class="color-box">
-											<span></span>
-										</div>
-									</div>
+									<input id="color-2" class="col-xs-3 item-color" type="checkbox" name="color-2" />
 
-									<div class="col-xs-3 item-color">
-										<div id="color-3" class="color-box">
-											<span></span>
-										</div>
-									</div>
+									<input id="color-3" class="col-xs-3 item-color" type="checkbox" name="color-3" />
 
-									<div class="col-xs-3 item-color">
-										<div id="color-4" class="color-box">
-											<span></span>
-										</div>
-									</div>
+
+									<input id="color-4" class="col-xs-3 item-color" type="checkbox" name="color-4" />
+
 
 
 								</div>
