--- a/client/styles/items.scss
+++ b/client/styles/items.scss
@@ -29,6 +29,11 @@ input.error{
    		border-bottom-left-radius: 20px;		
 	}
 
+	#itemPrice {
+		height: 61.8px;
+		padding: 0 0 0 15px;
+	}
+
 	.item-accept {
 		padding-left: 0px;
 	}
@@ -46,35 +51,61 @@ input.error{
 		}
 	}
 
-	.item-color {
-		height: 61.8px;
-   		margin-top: 20px;
-	}
-
 	.color-box {
-		width: 100%;
-		height: 100%;
+		overflow:hidden;
+		max-height:81.8px;
 	}
 
-	#color-1 {
-		background-color: #2C517D;
-		border-radius: 4px;
-
+	input[type=radio] {
+		display:none;
 	}
 
-	#color-2 {
-		background-color: #D35B5B;
-		border-radius: 4px;
+	@mixin color-radio($color) {
+		content: "";
+	    display: inline-block;
+	    cursor: pointer;
+	 	margin-top:20px;
+	    width: 61.8px;
+	    height: 61.8px;
+	    border-radius: 4px;
+	    margin-left: auto;
+	    margin-right: auto;
+	    left: 0;
+	    bottom: 1px;
+	    background-color: $color;
 	}
 
-	#color-3 {
-		background-color: #B29F59;
-		border-radius: 4px;
+	.color-label {
+    	margin-bottom:0px;
+    	max-height: 81.8px;
 	}
 
-	#color-4 {
-		background-color: #977BA9;
-		border-radius: 4px;
+	.label-1:before {
+		@include color-radio(#2C517D);
+	}
+
+	.label-2:before {
+		@include color-radio(#D35B5B);
+	}
+
+	.label-3:before {
+		@include color-radio(#B29F59);
+	}
+
+	.label-4:before {
+		@include color-radio(#977BA9);
+	}
+
+	input[type=radio]:checked + label:before {
+        margin-top: 20px;
+	    content: "\2022";
+	    color: #FFFFFF;
+	    font-size: 100px;
+	    text-align: center;
+	    line-height: 66%;
+	    top: 0px;
+	    left: 31px;
+
 	}
 
 	#suggestion-profile {
@@ -105,44 +136,7 @@ input.error{
 
 	}
 
-
-
 	.control-group:last-child {
 		padding-bottom: 20px;
 	}
-}
-
-
-.squaredThree label:after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-	filter: alpha(opacity=0);
-	opacity: 0;
-	content: '';
-	position: absolute;
-	width: 9px;
-	height: 5px;
-	background: transparent;
-	top: 4px;
-	left: 4px;
-	border: 3px solid #fcfff4;
-	border-top: none;
-	border-right: none;
-
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
-	-ms-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-}
-
-.squaredThree label:hover::after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=30)";
-	filter: alpha(opacity=30);
-	opacity: 0.3;
-}
-
-.squaredThree input[type=checkbox]:checked + label:after {
-	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-	filter: alpha(opacity=100);
-	opacity: 1;
 }
