Fix autocomplete and clear form after item set Add created and updated autovalues in schema

--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -10,14 +10,14 @@
 							<fieldset>
 								<div class="control-group">
 								  <div class="controls">
-								    <input id="itemName" name="name-input" type="text" placeholder="Name your item." class=" form-control" required>
+								    <input id="itemName" name="name-input" type="text" placeholder="Name your item." class=" form-control" autocomplete="off" required />
 								  </div>
 								</div>
 
 								<div class="control-group">
 									<div class="controls">
 										<div class="input-group input-append dropdown combobox" data-initialize="combobox" id="category-input">
-											<input id="itemCategory" type="text" class=" form-control" placeholder="Create/Select Category." name="category-input" required>
+											<input id="itemCategory" type="text" class=" form-control" placeholder="Create/Select Category." name="category-input" autocomplete="off" required />
 											<div class="input-group-btn">
 												<button id="category-dropdown-button" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
 												<ul id="category-dropdown" class="dropdown-menu dropdown-menu-right">
