--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -90,11 +90,15 @@
 			<div class="col-xs-12 col-sm-3 item-accept">
 				<div class="control-group">
 				  <div class="controls">
-				    <button type="submit" form="form" id="set-item" name="set-item" class="btn btn-success btn-lg btn-block"><span class="glyphicon glyphicon-ok"></span></button>
+
+				    <button type="submit" form="form" id="set-item" name="set-item" class="btn btn-success btn-lg btn-block"><span class="glyphicon {{plusOrCheck}}"></span></button>
+
+
+
 				  </div>
 				</div>
 			</div>
-
+			<h1> new item helper : {{newItem}} </h1>
 
 		</div>
 	</div>
