--- a/client/styles/login.scss
+++ b/client/styles/login.scss
@@ -1,33 +1,69 @@
 #login {
 
-	height:100%;
-
-
-	h1 {
-
-		margin-top: 200px;
-	    font-family: ff-nuvo-web-pro;
-	    font-weight: 900;
-	    letter-spacing: 10px;
-	    text-align: center;
-	    color: #fff;
-	    font-size: 10rem;
-
-	    span {
-	    	color: #17B26A;
+	.flex-container {
+	background-color:#1C1920;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    min-height: 100vh;
+    
+	    .login-form {
+	    	z-index: 1;
+	        border-radius: 10px;
+	        padding: 20px 30px;
+	        width: 90vw;
+	        text-align: center;
+	        color: #fff;
 	    }
+
+	    h1 {
+	    	margin-bottom: 30px;
+			margin-top: 80px;
+		    font-family: ff-nuvo-web-pro;
+		    font-weight: 900;
+		    letter-spacing: 10px;
+		    text-align: center;
+		    color: #fff;
+		    font-size: 10rem;
+
+		    span {
+		    	color: #17B26A;
+		    }
+		}
+
+	    .input-login {
+	    	height: 62px;
+    	    padding: 30px 15px;
+    		font-size: 30px;
+
+	    }
+
+	    .label-login {
+    	    font-size: 3.2rem;
+    		color: #fff;
+    		letter-spacing: 2px;
+    		font-family: ff-nuvo-web-pro;
+	    }
+
+	    #error-message{
+	        color:red;
+	    }
+
+	    button {
+	        margin-top:15px;
+	    }
+
 	}
 
-
-	img {
+	#logo-bot {
 		position: absolute;
-	    bottom: 0;
-	    left: 0;
-	    margin-left: auto;
+		width: 1000px;
+		min-width: 50%;
+		max-width: 80%;
+		bottom: 0px;
+    	right: 0px;
+    	left: 0px;
 	    margin-right: auto;
-	    max-height:40%;
-	    max-width: 1200px;
-	    opacity: .5;
-	    righT: 0;
+   		margin-left: auto;
 	}
 }
