--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -2,12 +2,12 @@
 	<div id ="item-details" class="container container-fix">
 		<div class="row">
 			<div class="col-xs-12 col-sm-9 item-fields">
-				
 				<div class="row">
-					<div class="col-xs-12 col-sm-6">
 
+					<div class="col-xs-12 col-sm-6">
 						<form id="form" class="form-horizontal">
 							<fieldset>
+
 								<div class="control-group">
 								  <div class="controls">
 								    <input id="itemName" name="name-input" type="text" placeholder="Name your item." class=" form-control" autocomplete="off" required />
@@ -39,10 +39,9 @@
 
 							</fieldset>
 						</form>
+					</div>	
 
-					</div>				
 					<div class="col-xs-12 col-sm-6">
-						
 						<form class="form-horizontal">
 							<fieldset>
 
@@ -83,6 +82,7 @@
 							</fieldset>
 						</form>
 					</div>
+
 				</div>
 			</div>
 
@@ -90,16 +90,13 @@
 			<div class="col-xs-12 col-sm-3 item-accept">
 				<div class="control-group">
 				  <div class="controls">
-
-				    <button type="submit" form="form" id="set-item" name="set-item" class="btn btn-success btn-lg btn-block"><span class="glyphicon {{plusOrCheck}}"></span></button>
-
-
-
+				    <button type="submit" form="form" id="set-item" name="set-item" class="btn btn-success btn-lg btn-block">
+				    	<span id="set-icon" class="glyphicon {{plusOrCheck}}"></span>
+				    	<h1 id="set-popup"> Item {{insOrUpd}} </h1>
+				    </button>
 				  </div>
 				</div>
 			</div>
-			<h1> new item helper : {{newItem}} </h1>
-
 		</div>
 	</div>
 </template>
