--- a/client/styles/login.scss
+++ b/client/styles/login.scss
@@ -1,3 +1,5 @@
+@import 'anim/pulse';
+
 #login {
 
 	.flex-container {
@@ -51,19 +53,32 @@
 
 	    button {
 	        margin-top:15px;
+	        font-size:3rem;
+	        color: #fff;
+	        background-color: #17B26A;
+	        font-weight:600;
+	        border: none;
+
+	        &:hover {
+	        	background-color: #00D672;
+	        	@include pulse;
+	        }
 	    }
 
-	}
+	    #mouth-box {
+	    	margin-top: auto;
 
-	#logo-bot {
-		position: absolute;
-		width: 1000px;
-		min-width: 50%;
-		max-width: 80%;
-		bottom: 0px;
-    	right: 0px;
-    	left: 0px;
-	    margin-right: auto;
-   		margin-left: auto;
+    	 	#mouth {
+				position: absolute;
+				width: 1000px;
+				min-width: 50%;
+				max-width: 80%;
+				bottom: 0px;
+		    	right: 0px;
+		    	left: 0px;
+			    margin-right: auto;
+		   		margin-left: auto;
+			}
+	    }
 	}
 }
