add toTitleCase method and item name/category sanitization

--- a/client/styles/login.scss
+++ b/client/styles/login.scss
@@ -52,7 +52,7 @@
 	    }
 
 	    button {
-	        margin-top:15px;
+	        margin:15px;
 	        font-size:3rem;
 	        color: #fff;
 	        background-color: #17B26A;
