--- a/client/templates/login.html
+++ b/client/templates/login.html
@@ -1,22 +1,5 @@
-<!-- <template name="login">
-
-	<div style="background-color:#1C1920; height:100%;">
-
-		<div id="login" class="container-fluid">
-
-			<h1> Welcome to <span>Hungrylist.</span> </h1>
-
-
-			<img src="hungrylist-mouth.svg">
-			{{ >loginButtons }}
-		</div> 
-	</div>
-
-</template> -->
-
 <template name="login">
 	<div id="login">
-		<!-- <img id="logo-bot" src="hungrylist-mouth.svg"> -->
 	    <div class="flex-container">
 	        <div class="login-form">
 	        	<h1> Welcome to <span>Hungrylist.</span> </h1>
@@ -36,13 +19,11 @@
 	                    </div>
 	                </div>
 	                <div class="form-group">
-	                    <div class="col-sm-6 text-right">
+	                    <div class="col-xs-12">
 	                        <button class="btn btn-default btn-lg" id="login-button">Login</button>
-	                    </div>
-	                    <div class="col-sm-6 text-left">
 	                        <button class="btn btn-default btn-lg" id="register-button">Register</button>
-	                    </div>
-	                </div>
+		                </div>
+		            </div>
 	            </form>
 	        </div>
 
