Sanitization improvement for item form Item list displays

--- a/client/styles/items.scss
+++ b/client/styles/items.scss
@@ -2,6 +2,12 @@ input.error{
     background-color:rgb(255, 231, 231);
 }
 
+/************************************
+*
+*  item creation block
+*
+************************************/
+
 #item-details {
 	padding-top: 20px;
 	color:white;
@@ -141,7 +147,6 @@ input.error{
 			background-color: #413B48;
 			color: #fff;
 		}
-
 	}
 
 	#amazon-profile {
@@ -162,3 +167,10 @@ input.error{
 		padding-bottom: 20px;
 	}
 }
+
+/************************************
+*
+*   item list
+*
+************************************/
+
