--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -118,8 +118,8 @@
 			<div class="col-sm-9 col-md-9 col-lg-9">
 				<div class="well">
 					<div class="list-group">
-						{{#each tasksFilter}}
-							<a href="/tasks/{{slug}}"> <button type="button" class="list-group-item">{{name}}</button></a>
+						{{#each itemFilter}}
+							<button type="button" class="list-group-item">{{name}}</button>
 						{{/each}}
 					</div>
 				</div>
