--- a/client/templates/layouts/nav.html
+++ b/client/templates/layouts/nav.html
@@ -4,7 +4,7 @@
 
         <div id="logo">
             <a rel="home" href="/" >
-                <img src="hungrylist-logo.svg">
+                <img src="/hungrylist-logo.svg">
                 <h1> Hungrylist </h1>
             </a>
         </div>
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
         </button>
         <a rel="home" href="#" title="Hungrylist">
-            <img style="height: 100px;" src="hungrylist-logo.svg">
+            <img style="height: 100px;" src="/hungrylist-logo.svg">
         </a>
         <!-- <ul class="nav navbar-nav navbar-right">
             { >loginButtons }}
