--- a/client/templates/items/items.html
+++ b/client/templates/items/items.html
@@ -20,7 +20,7 @@
 				<div class="well">
 					<div class="list-group">
 						{{#each itemFilter}}
-							<a href="/items/{{slug}}"><button type="button" class="list-group-item">{{name}}</button></a>
+							<a href="/items/{{slug}}"><button type="button" class="list-group-item" style="background-color: {{style.color}}">{{name}}</button></a>
 						{{/each}}
 					</div>
 				</div>
