--- a/client/templates/items/edititem.html
+++ b/client/templates/items/edititem.html
@@ -5,7 +5,7 @@
 
 			<div class="row">
 				<div class="col-xs-12 text-center">				
-					<h1 class="item-header"> Editing {{ name }}</h1>
+					<h1 class="item-header"> {{ name }}</h1>
 				</div>
 			</div>
 
