Clean up console logging

--- a/client/templates/items/edititem.html
+++ b/client/templates/items/edititem.html
@@ -4,8 +4,8 @@
 		<div class="col-xs-12 col-sm-9 item-fields">
 
 			<div class="row">
-				<div class="col-xs-12 text-center">				
-					<h1 class="item-header"> {{ name }}</h1>
+				<div class="col-xs-12 text-center">
+					<h1 class="item-header"><a href="/items"><span class="glyphicon glyphicon-chevron-left" style="float:left; color: #fff;"> </span></a> {{ name }}</h1>
 				</div>
 			</div>
 
