--- a/client/templates/items/edititem.html
+++ b/client/templates/items/edititem.html
@@ -68,7 +68,7 @@
 								</div>
 
 								<div class="col-xs-3 text-center color-box">
-									<input id="color-4" class="item-color" type="radio" name="color" value="#977BA9" />
+									<input id="color-4" class="item-color" type="radio" name="color" value="#675373" />
 									<label class="label-4 color-label" for="color-4"></label>
 								</div>
 							</div>
