--- a/client/templates/items/newitem.html
+++ b/client/templates/items/newitem.html
@@ -6,7 +6,7 @@
 			<div class="row">
 				<div class="col-xs-12 text-center">
 					{{#if existItem}}
-					<h1 class="item-header"> {{existItem}} already exists!</h1>
+					<h1 class="item-header"> <a class="header-link" href="{{existItem.url}}"><span style="color: {{existItem.color}}">{{existItem.name}}</span></a> already exists!</h1>
 					{{else}}
 					<h1 class="item-header"> New Item </h1>
 					{{/if}}
@@ -21,14 +21,14 @@
 
 							<div class="control-group">
 							  <div class="controls">
-							    <input id="itemName" name="itemName" type="text" placeholder="Name your item." class=" form-control" autocomplete="off" required />
+							    <input  class="item-name form-control" name="itemName" type="text" placeholder="Name your item." autocomplete="off" required />
 							  </div>
 							</div>
 
 							<div class="control-group">
 								<div class="controls">
 									<div class="input-group input-append dropdown combobox" data-initialize="combobox" id="category-input">
-										<input id="itemCategory" type="text" class=" form-control" placeholder="Create/Select Category." name="itemCategory" autocomplete="off" required />
+										<input class="item-category form-control" name="itemCategory" type="text"  placeholder="Create/Select Category."  autocomplete="off" required />
 										<div class="input-group-btn">
 											<button id="category-dropdown-button" type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="caret"></span></button>
 											<ul id="category-dropdown" class="dropdown-menu dropdown-menu-right">
@@ -43,7 +43,7 @@
 
 							<div class="control-group">
 							  <div class="controls">
-							    <input type="number" min="0" id="itemPrice" name="itemPrice" placeholder="Set price of item." class="form-control" required>
+							    <input class="item-price form-control" type="number" min="0" name="itemPrice" placeholder="Set price of item." required />
 							  </div>
 							</div>
 
